<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_profile"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackgroundGray"
    tools:context=".ui.neighbour_list.NeighbourProfile">

    <FrameLayout
...

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.FloatingActionButton
                    android:id="@+id/floatingActionButton_add_favorite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginTop="260dp"
                    android:layout_marginEnd="30dp"
                    android:clickable="true"
...
